@@ -104,6 +104,9 @@ body {
 	--off-black-1: #111;	/* black button */
 	--black: #000;	/* button border */
 	--light-gray-2: #777;	/* sidebar items border */
+	--super-light-gray-1: #f5f5f5;	/* next button bg */
+	--light-gray-3: #e5e5e5;	/* next button border */
+	--off-black-1: #1e1e1e;	/* archive pagination active */
 }
 
 /* HTML5 Reset
@@ -182,7 +185,7 @@ html {
 
 /* js edit - change bg, color, font-family, font-weight */
 body {
-	background-color: var(--light-gray);
+	background-color: var(--white);
 	color: var(--dark-gray);
 	font-family: "PT Sans", sans-serif;
 	font-size: 18px;
@@ -418,7 +421,7 @@ textarea {
 	color: var(--medium-gray-1);
 	font-size: 18px;
 	/* font-weight: 400; */
-	padding: 11px;
+	padding: 4px;
 	width: 100%;
 	border-radius: 3px;
 }
@@ -698,11 +701,23 @@ th {
 	margin-bottom: 0;
 }
 
+/* js edit - addition */
+.archive-description {
+	background: var(--white);
+	margin-bottom: 35px; /* 2.5rem */
+	padding: 35px 35px 21px;	/* 2.5rem 2.5rem 1.5rem */
+}
+.archive-title {
+	font-size: 18px;	/* 1.25rem */
+	margin-bottom: 21px;	/* 1.5rem */
+}
+
 /* Search Form
 --------------------------------------------- */
 
 .search-form {
 	overflow: hidden;
+	line-height: 1.625;	/* js edit */
 }
 
 .entry-content .search-form {
@@ -1387,20 +1402,26 @@ p.entry-meta {
 .adjacent-entry-pagination {
 	margin-bottom: 0;
 }
+/* js edit */
+.archive-pagination {
+	margin: 0 0 40px;
+}
 
 .archive-pagination li {
 	display: inline;
 }
 
+/* js edits */
 .archive-pagination li a {
-	background-color: #f5f5f5;
-	color: #333;
+	background-color: var(--dark-gray);
+	color: var(--white);
+	border-radius: 3px;
 	cursor: pointer;
 	display: inline-block;
-	font-size: 16px;
+	font-size: 14px;
 	font-weight: 600;
-	margin-bottom: 4px;
-	padding: 8px 12px;
+	margin: 0;
+	padding: 4px 12px;
 	text-decoration: none;
 }
 
@@ -1408,7 +1429,6 @@ p.entry-meta {
 .archive-pagination li a:hover,
 .archive-pagination li.active a {
 	background-color: #333;
-	color: #fff;
 }
 
 /* Entry Comments
@@ -1464,20 +1484,19 @@ p.entry-meta {
 	padding-left: 10px;
 }
 
-/* Sidebar
+/* Sidebars
 ---------------------------------------------------------------------------- */
 /* js edit */
 .sidebar {
 	font-size: 16px;
 	line-height: 1.5;
 	color: var(--dark-gray-1);
-	background-color: var(--dark-gray);
 }
 
 .sidebar .widget {
 	margin-bottom: 32px;
-	border-bottom: 1px solid var(--light-gray-1);
 	padding-bottom: 32px;
+	border-bottom: 1px solid var(--light-gray-1);
 }
 
 .sidebar p {
@@ -1487,6 +1506,20 @@ p.entry-meta {
 .sidebar .widgettitle {
 	text-transform: uppercase;
 	font-size: 13px;
+}
+
+.sidebar .widget h1,
+.sidebar .widget h2,
+.sidebar .widget h3,
+.sidebar .widget h4,
+.sidebar .widget h5,
+.sidebar .widget h6 {
+	color: var(--dark-gray-2);
+}
+
+/* sponge and primary sidebars */
+.sidebar-content .sidebar-primary {
+	background-color: var(--dark-gray);
 }
 
 /* Footer Widgets
@@ -1550,7 +1583,7 @@ p.entry-meta {
 /* Media Queries
 ---------------------------------------------------------------------------- */
 
-@media only screen and (min-width: 480px) {
+/* @media only screen and (min-width: 480px) {
 
 	table {
 		table-layout: auto;
@@ -1562,10 +1595,48 @@ p.entry-meta {
 		padding-right: 5%;
 	}
 	.site-inner {
-		margin-left: 5%;
-		margin-right: 5%;
+		padding-left: 5%;
+		padding-right: 5%;
 	}
 
+} */
+
+/* js edits */
+@media only screen and (max-width: 960px) {
+	table {
+		table-layout: auto;
+		word-break: normal;
+	}
+
+	.site-header {
+		padding-left: 5%;
+		padding-right: 5%;
+	}
+	.site-inner {
+		padding-left: 5%;
+		padding-right: 5%;
+	}
+
+	/* center titles */
+	.entry-title {
+		text-align: center;
+		padding-left: 0;
+		padding-right: 0;
+	}
+
+	/* membership checkout page */
+	.pmpro-checkout .entry-content {
+		padding-left: 0;
+		padding-right: 0;
+	}
+	.pmpro_checkout-field .input.pmpro_required {
+		max-width: 200px !important;
+		padding-right: 0 !important;
+	}
+	.pmpro_asterisk {
+		padding-left: 10px !important;
+		padding-right: 0 !important;
+	}
 }
 
 @media only screen and (min-width: 961px) {
@@ -1797,17 +1868,6 @@ p.entry-meta {
 		margin-bottom: 60px;
 	}
 
-	/* js edit - addition */
-	.archive-description {
-		background: var(--white);
-		margin-bottom: 35px; /* 2.5rem */
-		padding: 35px 35px 21px;	/* 2.5rem 2.5rem 1.5rem */
-	}
-	.archive-title {
-		font-size: 18px;	/* 1.25rem */
-		margin-bottom: 21px;	/* 1.5rem */
-	}
-
 	/* Footer Widgets
 	--------------------------------------------- */
 
@@ -1968,6 +2028,15 @@ p.entry-meta {
 
 /* Miscellaneous - js edit
 ---------------------------------------------------------------------------- */
+/* pdf button */
+a.button.pdf {
+	text-decoration: underline;
+	border: none !important;
+	color: var(--black) !important;
+	padding-right: 40px;
+	background: var(--white) url(./images/pdf.jpg) no-repeat right;
+}
+
 /* boxes */
 /* quote */
 .quote,
@@ -1988,6 +2057,9 @@ p.entry-meta {
 	margin-bottom: 0;
 }
 /* quote-gray */
+.quote-gray {
+	padding: 20px;
+}
 .quote-gray,
 .wp-block-gccustom-quote-box.is-style-gray,
 .wp-block-gccustom-quote-box.is-style-gray-green-button,
@@ -2054,6 +2126,7 @@ p.entry-meta {
 }
 
 /* fancy bullets */
+ul.greenchecks li,
 ul.is-style-green-checks li {
 	background-image: url(./images/green-check.png);
 	padding: 0px 0px 12px 24px;
@@ -2066,6 +2139,7 @@ ul.is-style-green-checks li {
 	text-align: left;
 }
 
+ul.checks li,
 ul.is-style-red-checks li {
 	background-image: url(./images/red-check.png);
 	padding: 0px 0px 12px 24px;
@@ -2137,7 +2211,7 @@ ul.is-style-red-checks li {
 }
 .quote-charcoal h4,
 .quote-charcoal a {
-	color: var(--white);
+	color: var(--white) !important;
 }
 
 /* base */
@@ -2187,8 +2261,15 @@ ul.is-style-red-checks li {
 	background: var(--dark-gray) url(/wp-content/uploads/coreimg/Logout-32x32.png) no-repeat 10px 15px;
 }
 
-/* 'floating' style for course posts only */
-.category-study-skills .entry {
+/* js edit 'floating' style for course posts only */
+body.category-study-skills,
+body.sidebar-content.single-post {
+	background: var(--light-gray);
+}
+
+.study-skills-course,
+.category-study-skills .entry,
+.category-study-skills.entry {
 	margin: 0 3px 40px;
 	padding: 20px 0 0;
 	/* can remove below this after ld switch */
@@ -2197,10 +2278,14 @@ ul.is-style-red-checks li {
 	-webkit-box-shadow: 0 3px 6px rgba(0,0,0, .2);
 	background: var(--white);
 }
-.category-study-skills h2.entry-title {
+.category-study-skills .entry-content {
+	padding-bottom: 0;
+}
+.category-study-skills .entry-title {
 	margin-bottom: 0;
 }
-.category-study-skills .entry-meta {
+.category-study-skills .entry-meta,
+.study-skills-course .entry-meta {
 	clear: both;
 	color: var(--medium-gray-1);
 	font-size: 11px;	/* .75rem */
@@ -2209,13 +2294,186 @@ ul.is-style-red-checks li {
 	padding: 20px;
 	text-transform: uppercase;
 }
-.category-study-skills .entry-content p {
+.category-study-skills .entry-content p,
+.study-skills-course .entry-content p {
 	margin-bottom: 22px;
 }
-.category-study-skills .entry-footer {
+.category-study-skills .entry-footer,
+.study-skills-course .entry-footer {
 	background: var(--super-light-gray);
 	padding: 10px 18px;	/* .625rem 1.25rem */
+	/* margin-top: 20px; */
 }
-.category-study-skills .entry-footer p {
+.category-study-skills .entry-footer p,
+.category-study-skills .entry-content p:first-of-type {
 	margin-bottom: 0;
+}
+
+/* js edit intro post box */
+/* possibly put .tatut-box a code here? not sure what it does yet */
+/* next button */
+.gray-box {
+	box-shadow: 0 2px 2px 0 #ddd;
+	-moz-box-shadow: 0 2px 2px 0 #ddd;
+	-webkit-box-shadow: 0 2px 2px 0 #ddd;
+	border-radius: 3px;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	background: var(--super-light-gray-1);
+	border: 1px solid var(--light-gray-3);
+	color: var(--gray);	/* only needed if this is used in other places besides the next button */
+	margin: 0 2px 20px;
+	padding: 20px 15px 20px;
+}
+
+/* don't show title on non-lede pages */
+.entry-title-clean-slide {
+	display: none !important;
+}
+
+/*
+ * js edit - pmpro membership checkout styling
+*/
+/* remove entry title padding */
+.page-template-epik-landing .entry-title {
+	margin-bottom: 0 !important;
+}
+
+/* remove "Membership Level" section */
+.pmpro_checkout#pmpro_pricing_fields {
+	display: none !important;
+}
+
+/* remove the bar at the top and bottom of the div */
+.pmpro_checkout hr, .pmpro_submit hr, .pmpro_form hr {
+	display: none !important;
+}
+
+/* "Please enter ___ information" message */
+#pmpro_checkout_level_msg {
+	padding-left: 10px;
+}
+
+/* headers for each section */
+table.pmpro_checkout thead th,
+#pmpro_form .pmpro_checkout h3 {
+	text-align: left;
+	font-weight: bold;
+	color: var(--dark-gray);
+	padding: 10px;
+	font-size: 24px;
+}
+/* #pmpro_form .pmpro_checkout h3 {
+	text-align: left;
+	font-weight: bold;
+	color: #444;
+	padding: 10px;
+} */
+
+.pmpro_checkout h3 span.pmpro_checkout-h3-msg {
+	font-size: 11px;
+	font-style: italic;
+	font-weight: normal;
+	letter-spacing: normal;
+	display: block;
+	float: right;
+	width: auto;
+}
+
+/* input boxes and labels */
+.pmpro_checkout-fields div,
+#pmpro_extra_seats div {
+	text-align: left !important;
+}
+
+.pmpro_checkout-fields label,
+#pmpro_extra_seats label,
+.pmpro_checkout-fields .pmpro_asterisk {
+	/* width: 220px !important; */
+	display: inline-block !important;
+	padding: 10px;
+	/* text-align: right !important; */
+}
+
+input#username, input#password, #password2, #first_name, #last_name, #bemail, #bconfirmemail {
+	max-width: 375px;
+	width: auto;
+	display: inline-block !important;
+	padding: 10px;
+}
+
+/* order summary content */
+#pmpro_extra_seats > tbody:nth-child(2) > tr:nth-child(1) > td:nth-child(1) > div:nth-child(1) > select:nth-child(2) {
+	width: 65px;
+	font-size: 14px;
+	padding: 10px;
+	display: inline-block;
+}
+#plan, #seats, #tprice {
+	width: 200px;
+	border-style: none;
+	box-shadow: none;
+	font-size: 24px;
+	color: green;
+	padding: 0px;
+	display: inline-block;
+}
+
+/* payment information content */
+.pmpro_checkout_gateway-stripe form.pmpro_form #pmpro_payment_information_fields .pmpro_checkout-fields,
+.pmpro_billing_gateway-stripe form.pmpro_form #pmpro_payment_information_fields .pmpro_checkout-fields {
+	display: flex !important;
+	flex-direction: column;
+}
+
+.pmpro_payment-account-number,
+.pmpro_payment-expiration,
+.pmpro_payment-cvv {
+	display: flex !important;
+	flex-direction: row;
+	justify-content: space-between;
+	max-width: 356px;
+}
+
+div#AccountNumber.StripeElement, div#Expiry.StripeElement, div#CVV.StripeElement {
+	width: 200px;
+	color: var(--dark-gray-1) !important;
+	background: var(--white) !important;
+	border: 1px solid var(--medium-gray-2) !important;
+	border-radius: 3px !important;
+	margin: 0 !important;
+	padding: 0.625em 0.4375em !important;
+}
+
+.pmpro_payment-discount-code {
+	display: none;
+}
+
+.pmpro_btn, .pmpro_btn:link, .pmpro_content_message a, .pmpro_content_message a:link {
+	margin: 25px;
+}
+
+#pmpro_payment_method span.gateway_paypalexpress {
+	margin-left: 2em;
+}
+#pmpro_payment_information_fields .pmpro_checkout-fields-display-seal {
+	clear: both;
+	display: -ms-grid;
+	display: grid;
+	-ms-grid-columns: 3fr 1em 1fr;
+	grid-template-columns: 3fr 1fr;
+	grid-gap: 1em;
+}
+#pmpro_license {
+	background: var(--white);
+	border: 1px solid var(--medium-gray-2);
+	color: var(--dark-gray-1);
+	height: 200px;
+	margin: 3px;
+	overflow: auto;
+	padding: 5px;
+}
+
+.pmpro_submit {
+	text-align: right;
 }
